UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Above_Average_Poverty_Status__c.field-meta.xml
<CustomField>
    <fullName>Above_Average_Poverty_Status__c</fullName>
    <label>Above Average Poverty Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>