UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/AccountShippingState__c.field-meta.xml
<CustomField>
    <fullName>AccountShippingState__c</fullName>
    <description>Account.ShippingStateCode</description>
    <formula>TEXT(Account.ShippingStateCode)</formula>
    <label>AccountShippingState</label>
    <type>Text</type>
</CustomField>