UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Acct_RCDTYPE_Name__c.field-meta.xml
<CustomField>
    <fullName>Acct_RCDTYPE_Name__c</fullName>
    <formula>Account.RecordType.Name</formula>
    <label>Acct RCDTYPE Name</label>
    <type>Text</type>
</CustomField>