UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Additional_Audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Audit_Notes__c</fullName>
    <label>Additional Audit Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>