UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Additional_deal_points__c.field-meta.xml
<CustomField>
    <fullName>Additional_deal_points__c</fullName>
    <label>Additional deal points</label>
    <length>255</length>
    <type>Text</type>
</CustomField>