UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Address_Lost_Count__c.field-meta.xml
<CustomField>
    <fullName>Address_Lost_Count__c</fullName>
    <label>Address Lost Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>