UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Address_Lost_reason__c.field-meta.xml
<CustomField>
    <fullName>Address_Lost_reason__c</fullName>
    <label>Address Lost reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not in Network</fullName>
            </value>
            <value>
                <fullName>CIAC too High</fullName>
            </value>
            <value>
                <fullName>Lost to competitor</fullName>
            </value>
            <value>
                <fullName>Competitor/Price</fullName>
            </value>
            <value>
                <fullName>Competitor/Due Date</fullName>
            </value>
            <value>
                <fullName>Competitor/Other</fullName>
            </value>
            <value>
                <fullName>Quote timed out</fullName>
            </value>
            <value>
                <fullName>8.      Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>