UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Addresses_Lost1__c.field-meta.xml
<CustomField>
    <fullName>Addresses_Lost1__c</fullName>
    <label>Addresses Lost</label>
    <summaryFilterItems>
        <field>FTRWSAddress__c.Address_Lost_checkbox__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>FTRWSAddress__c.Opportunity_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>