UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Addresses_pending_BDT_Response22__c.field-meta.xml
<CustomField>
    <fullName>Addresses_pending_BDT_Response22__c</fullName>
    <formula>Total_Addresses_on_Opportunity__c  -  AddresseswithBDTResponse1__c  -  Addresses_Lost1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addresses pending BDT Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>