UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Addresses_pending_BDT_Response__c.field-meta.xml
<CustomField>
    <fullName>Addresses_pending_BDT_Response__c</fullName>
    <label>Addresses pending BDT Response</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>