UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Addresses_with_BDT_Required__c.field-meta.xml
<CustomField>
    <fullName>Addresses_with_BDT_Required__c</fullName>
    <description>This field needs to count how many unique addresses have the 
BDT Required checkbox populated and 
the Address Lost checkbox is NOT populated.</description>
    <label>Addresses with  BDT Required</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>