UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Addresses_with_no_BDT_Required__c.field-meta.xml
<CustomField>
    <fullName>Addresses_with_no_BDT_Required__c</fullName>
    <label>Addresses with no BDT Required</label>
    <summaryFilterItems>
        <field>FTRWSAddress__c.BDT_Required_checkbox__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FTRWSAddress__c.Address_Lost_checkbox__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>FTRWSAddress__c.Opportunity_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>