UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Addresses_Won__c.field-meta.xml
<CustomField>
    <fullName>Addresses_Won__c</fullName>
    <label>Addresses Won</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>