UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/AddresseswithBDTResponse__c.field-meta.xml
<CustomField>
    <fullName>AddresseswithBDTResponse__c</fullName>
    <label>Addresses with BDT Response</label>
    <summaryFilterItems>
        <field>FTRWSAddress__c.BDT_Required_checkbox__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>FTRWSAddress__c.Opportunity_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>