UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Adjusted_Total_MRR__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Total_MRR__c</fullName>
    <formula>Total_Monthly_Amount__c -  Lost_MRR2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRR Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>