UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Agent_1st_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_1st_Bill_Date__c</fullName>
    <label>Agent 1st Bill Date</label>
    <type>Date</type>
</CustomField>