UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Agent_Billing_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Billing_Verified_Date__c</fullName>
    <label>Agent Billing Verified Date</label>
    <type>Date</type>
</CustomField>