UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Agent_LD_Promo_Residuals__c.field-meta.xml
<CustomField>
    <fullName>Agent_LD_Promo_Residuals__c</fullName>
    <label>Agent LD Promo Residuals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LD Promo 18%</fullName>
            </value>
            <value>
                <fullName>LD Promo 20%</fullName>
            </value>
            <value>
                <fullName>LD Promo 22%</fullName>
            </value>
            <value>
                <fullName>LD Promo 24%</fullName>
            </value>
            <value>
                <fullName>LD Promo 26%</fullName>
            </value>
            <value>
                <fullName>LD Promo 28%</fullName>
            </value>
            <value>
                <fullName>LD Promo 30%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>