UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <label>Agent Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BBS</fullName>
            </value>
            <value>
                <fullName>Bizwonk 015755</fullName>
            </value>
            <value>
                <fullName>Blue Tower 015775</fullName>
            </value>
            <value>
                <fullName>Bravo Technology</fullName>
            </value>
            <value>
                <fullName>Caar Communications</fullName>
            </value>
            <value>
                <fullName>CambellNet Solutions015711</fullName>
            </value>
            <value>
                <fullName>Capital Performance 015682</fullName>
            </value>
            <value>
                <fullName>Corporate Comm 015680</fullName>
            </value>
            <value>
                <fullName>Diginex</fullName>
            </value>
            <value>
                <fullName>Diversified Telecom 015724</fullName>
            </value>
            <value>
                <fullName>Enhanced Communications 015681</fullName>
            </value>
            <value>
                <fullName>Enterprise 015599</fullName>
            </value>
            <value>
                <fullName>Faber Homes 015754</fullName>
            </value>
            <value>
                <fullName>Galina Development 015669</fullName>
            </value>
            <value>
                <fullName>ICN 015627</fullName>
            </value>
            <value>
                <fullName>Integrated Comm 015707</fullName>
            </value>
            <value>
                <fullName>Intercom Technology</fullName>
            </value>
            <value>
                <fullName>Just Solutions Inc. 015723</fullName>
            </value>
            <value>
                <fullName>Kenna Communications 015802</fullName>
            </value>
            <value>
                <fullName>Kriterium 015712</fullName>
            </value>
            <value>
                <fullName>Layer 8 Group 015598</fullName>
            </value>
            <value>
                <fullName>Microtech Info 015713</fullName>
            </value>
            <value>
                <fullName>Network Technology Grp 015804</fullName>
            </value>
            <value>
                <fullName>New Season Consulting 015708</fullName>
            </value>
            <value>
                <fullName>On Hold Specialties 015803</fullName>
            </value>
            <value>
                <fullName>Our Computer Guy</fullName>
            </value>
            <value>
                <fullName>PC Innovations 015683</fullName>
            </value>
            <value>
                <fullName>QuoteColo LLC</fullName>
            </value>
            <value>
                <fullName>RawSaw</fullName>
            </value>
            <value>
                <fullName>Relcomm 015710</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>