UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Agent_Net_New_MRR_ink__c.field-meta.xml
<CustomField>
    <fullName>Agent_Net_New_MRR_ink__c</fullName>
    <label>Agent Net New MRR (ink)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>