UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Agent_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Agent_Paid_Amount__c</fullName>
    <label>Agent Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>