UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Agent_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Payment_Date__c</fullName>
    <label>Agent Payment Date</label>
    <type>Date</type>
</CustomField>