UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Agent_Renewal_MRR__c.field-meta.xml
<CustomField>
    <fullName>Agent_Renewal_MRR__c</fullName>
    <label>Agent Renewal MRR (ink)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>