UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Bulk_Res</fullName>
                <default>true</default>
                <label>Bulk Res</label>
            </value>
            <value>
                <fullName>BULK-EMA</fullName>
            </value>
            <value>
                <fullName>Bulk Corp</fullName>
            </value>
            <value>
                <fullName>EMA</fullName>
            </value>
            <value>
                <fullName>EMA-DOORFEEONLY</fullName>
            </value>
            <value>
                <fullName>EMA-DOOR-REVSHARE</fullName>
            </value>
            <value>
                <fullName>EMA-REVSHAREONLY</fullName>
            </value>
            <value>
                <fullName>NEMA</fullName>
            </value>
            <value>
                <fullName>No Contract</fullName>
            </value>
            <value>
                <fullName>PAL</fullName>
            </value>
            <value>
                <fullName>Markeing</fullName>
            </value>
            <value>
                <fullName>PAL-Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>