UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Agt_NRC_ink__c.field-meta.xml
<CustomField>
    <fullName>Agt_NRC_ink__c</fullName>
    <label>Agent NRC (ink)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>