UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Agt_Term_Residual__c.field-meta.xml
<CustomField>
    <fullName>Agt_Term_Residual__c</fullName>
    <label>Agent Term/ Residual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1yr or less /10%</fullName>
            </value>
            <value>
                <fullName>2yr /14%</fullName>
            </value>
            <value>
                <fullName>3yr /16%</fullName>
            </value>
            <value>
                <fullName>4yr / 18%</fullName>
            </value>
            <value>
                <fullName>5yr+ / 20%</fullName>
            </value>
            <value>
                <fullName>1yr /4%</fullName>
            </value>
            <value>
                <fullName>2yr /5%</fullName>
            </value>
            <value>
                <fullName>3yr /6%</fullName>
            </value>
            <value>
                <fullName>MTM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>