UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Allowable_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Allowable_Contract_Date__c</fullName>
    <description>Created for E-Rate Section for Lisa Barrow case 00772157 6/2021</description>
    <label>Allowable Contract Date</label>
    <type>Date</type>
</CustomField>