UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Alt_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Alt_Site_Name__c</fullName>
    <label>Alt Site Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>