UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Amendment_Description__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Description__c</fullName>
    <inlineHelpText>Brief description of the nature of the amendment</inlineHelpText>
    <label>Amendment Description</label>
    <type>TextArea</type>
</CustomField>