UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <description>Created for E-Rate Section for Lisa Barrow case 00772157 6/2021</description>
    <label>Applicant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>