UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Approval Status from QLI for controlling when Close/Won can be selected</description>
    <label>Approval Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>