UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Approved_Build_CLs__c.field-meta.xml
<CustomField>
    <fullName>Approved_Build_CLs__c</fullName>
    <label>Approved Build CLs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>