UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Date that the manager originally approved the Opportunity</description>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>