UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/AreaCode__c.field-meta.xml
<CustomField>
    <fullName>AreaCode__c</fullName>
    <formula>IF( LEFT(Account.Phone, 1)= &apos;(&apos;,mid(Account.Phone,2,3), 
MID( Account.Phone ,1,3))</formula>
    <label>AreaCode</label>
    <type>Text</type>
</CustomField>