UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Attractive_Grant_CLs__c.field-meta.xml
<CustomField>
    <fullName>Attractive_Grant_CLs__c</fullName>
    <label>Attractive Grant CLs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>