UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Audit_Finding_Summary__c.field-meta.xml
<CustomField>
    <fullName>Audit_Finding_Summary__c</fullName>
    <label>Audit Finding Summary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract/Supporting Documents Missing</fullName>
            </value>
            <value>
                <fullName>CPE Gross Margin % does not match UTACS</fullName>
            </value>
            <value>
                <fullName>Invalid Order Number</fullName>
            </value>
            <value>
                <fullName>Net New MRR or CPE Value Incorrect</fullName>
            </value>
            <value>
                <fullName>Order Cancelled</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pricing does not Match contract</fullName>
            </value>
            <value>
                <fullName>Product Entered Not on Order</fullName>
            </value>
            <value>
                <fullName>Record Update/No Sale</fullName>
            </value>
            <value>
                <fullName>Sale Month Variance</fullName>
            </value>
            <value>
                <fullName>STATS Not Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>