UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Audited_By__c.field-meta.xml
<CustomField>
    <fullName>Audited_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audited By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>