UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Audited_by_E_Rate_Team__c.field-meta.xml
<CustomField>
    <fullName>Audited_by_E_Rate_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Lisa Barrow case 00757060 3/11/2021 to be used by herself and the E-Rate team</description>
    <label>Audited by E-Rate Team</label>
    <type>Checkbox</type>
</CustomField>