UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <inlineHelpText>Who makes the final decision to buy in the organization?</inlineHelpText>
    <label>Authority</label>
    <length>200</length>
    <type>Text</type>
</CustomField>