UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Average_Revenue_per_Customer_ARPC__c.field-meta.xml
<CustomField>
    <fullName>Average_Revenue_per_Customer_ARPC__c</fullName>
    <label>Average Revenue per Customer (ARPC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>