UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Avg_MRC__c.field-meta.xml
<CustomField>
    <fullName>Avg_MRC__c</fullName>
    <label>Avg MRC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>