UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Avg_NRC__c.field-meta.xml
<CustomField>
    <fullName>Avg_NRC__c</fullName>
    <label>Avg NRC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>