UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/BDT_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>BDT_Create_Date__c</fullName>
    <label>BDT Create Date</label>
    <type>Date</type>
</CustomField>