UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/BDT_is_Required__c.field-meta.xml
<CustomField>
    <fullName>BDT_is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Lisa Barrows for E-Rate on case 00721377</description>
    <label>BDT is Required</label>
    <type>Checkbox</type>
</CustomField>