UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/BDT_Number__c.field-meta.xml
<CustomField>
    <fullName>BDT_Number__c</fullName>
    <description>This is the same field from the SRQ. Pulled into the Oppt upon the request of the Direct sales team (Joel McCain)</description>
    <inlineHelpText>If you do not have this just enter N/A.</inlineHelpText>
    <label>BDT Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>