UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/BDT_Status__c.field-meta.xml
<CustomField>
    <fullName>BDT_Status__c</fullName>
    <label>BDT Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BDT_Required__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Change Required</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>