UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/BEN__c.field-meta.xml
<CustomField>
    <fullName>BEN__c</fullName>
    <description>Created for E-Rate Section for Lisa Barrow case 00772157 6/2021</description>
    <label>BEN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>