UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <formula>Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing State/Province</label>
    <type>Text</type>
</CustomField>