UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Blitzing__c.field-meta.xml
<CustomField>
    <fullName>Blitzing__c</fullName>
    <label>Blitzing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lit Building Project 2020</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>CA Lit Building 2018</fullName>
                <isActive>false</isActive>
                <label>CA Lit Building 2018</label>
            </value>
            <value>
                <fullName>East - Sept 2018 Blitz</fullName>
                <isActive>false</isActive>
                <label>East - Sept 2018 Blitz</label>
            </value>
            <value>
                <fullName>Simply WiFi Tiger Team</fullName>
                <isActive>false</isActive>
                <label>Simply WiFi Tiger Team</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>