UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <inlineHelpText>Can your prospect afford to buy your product or service; actual price?</inlineHelpText>
    <label>Actual price (Budget)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>