UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/BudgetText__c.field-meta.xml
<CustomField>
    <fullName>BudgetText__c</fullName>
    <inlineHelpText>Can your prospect afford to buy your product or service; actual price?</inlineHelpText>
    <label>Budget</label>
    <length>200</length>
    <type>Text</type>
</CustomField>