UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Build_CapEx__c.field-meta.xml
<CustomField>
    <fullName>Build_CapEx__c</fullName>
    <description>Build CapEx for Outbound opportunities.</description>
    <inlineHelpText>Build CapEx for Outbound opportunities.</inlineHelpText>
    <label>Build CapEx</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>